[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hunt-protocol-mcp"
version = "0.1.0"
description = "MCP server exposing Hunt Protocol sovereign memory operations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "cryptography>=41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hunt_protocol"]
artifacts = ["server.py"]

[project.scripts]
hunt-mcp = "server:main"
