[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provara"
version = "0.1.1"
description = "MCP server for sovereign AI memory — tamper-evident, cryptographically signed, deterministic state"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Provara", email = "hello@provara.dev" },
]
keywords = [
    "mcp",
    "ai-memory",
    "sovereign-memory",
    "event-sourcing",
    "tamper-evident",
    "ed25519",
    "cryptography",
    "ai-agents",
    "provara",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://provara.dev"
Repository = "https://github.com/huntinformationsystems/hunt-protocol-mcp"
Documentation = "https://github.com/huntinformationsystems/hunt-protocol-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["hunt_protocol"]

[project.scripts]
hunt-mcp = "hunt_protocol.server:main"
